--- a/Testbed/Testbed.Android/packages.config
+++ b/Testbed/Testbed.Android/packages.config
@@ -7,11 +7,11 @@
   <package id="HadoukInput" version="2.0.0" targetFramework="monoandroid44" />
   <package id="InputHelper" version="2.0.0" targetFramework="monoandroid44" />
   <package id="MatrixExtensions" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="MenuBuddy" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.0-preview3-27014-02" targetFramework="monoandroid44" />
+  <package id="MenuBuddy" version="2.0.3" targetFramework="monoandroid81" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="monoandroid81" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid44" />
   <package id="MonoGame.Framework.Android" version="3.7.0.1708" targetFramework="monoandroid44" />
-  <package id="MonogameScreenTools" version="1.0.10" targetFramework="monoandroid81" />
+  <package id="MonogameScreenTools" version="1.0.13" targetFramework="monoandroid81" />
   <package id="MouseBuddy" version="2.0.0" targetFramework="monoandroid44" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="monoandroid44" />
   <package id="Plugin.CurrentActivity" version="2.1.0.2" targetFramework="monoandroid81" />
@@ -19,8 +19,8 @@
   <package id="PrimitiveBuddy" version="2.0.0" targetFramework="monoandroid44" />
   <package id="RandomExtensions.dmanning23" version="2.0.0" targetFramework="monoandroid44" />
   <package id="ResolutionBuddy" version="2.0.1" targetFramework="monoandroid44" />
-  <package id="SixLabors.Core" version="1.0.0-beta0006" targetFramework="monoandroid81" />
-  <package id="SixLabors.ImageSharp" version="1.0.0-dev002099" targetFramework="monoandroid81" />
+  <package id="SixLabors.Core" version="1.0.0-dev000085" targetFramework="monoandroid81" />
+  <package id="SixLabors.ImageSharp" version="1.0.0-dev002197" targetFramework="monoandroid81" />
   <package id="StateMachineBuddy" version="2.0.0" targetFramework="monoandroid44" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid44" />
   <package id="System.Buffers" version="4.5.0" targetFramework="monoandroid44" />
