--- a/Testbed/Testbed.WindowsDX/packages.config
+++ b/Testbed/Testbed.WindowsDX/packages.config
@@ -7,13 +7,14 @@
   <package id="HadoukInput" version="2.0.0" targetFramework="net461" />
   <package id="InputHelper" version="2.0.0" targetFramework="net461" />
   <package id="MatrixExtensions" version="2.0.0" targetFramework="net461" />
-  <package id="MenuBuddy" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.0-preview3-27014-02" targetFramework="net461" />
+  <package id="MenuBuddy" version="2.0.3" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="MonoGame.Framework.WindowsDX" version="3.7.0.1708" targetFramework="net461" />
-  <package id="MonogameScreenTools" version="1.0.10" targetFramework="net461" />
+  <package id="MonogameScreenTools" version="1.0.13" targetFramework="net461" />
   <package id="MouseBuddy" version="2.0.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
+  <package id="Plugin.Permissions" version="3.0.0.12" targetFramework="net461" />
   <package id="PrimitiveBuddy" version="2.0.0" targetFramework="net461" />
   <package id="RandomExtensions.dmanning23" version="2.0.0" targetFramework="net461" />
   <package id="ResolutionBuddy" version="2.0.1" targetFramework="net461" />
@@ -26,8 +27,8 @@
   <package id="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.XAudio2" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.XInput" version="4.2.0" targetFramework="net461" />
-  <package id="SixLabors.Core" version="1.0.0-beta0006" targetFramework="net461" />
-  <package id="SixLabors.ImageSharp" version="1.0.0-dev002099" targetFramework="net461" />
+  <package id="SixLabors.Core" version="1.0.0-dev000085" targetFramework="net461" />
+  <package id="SixLabors.ImageSharp" version="1.0.0-dev002197" targetFramework="net461" />
   <package id="StateMachineBuddy" version="2.0.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
