--- a/Testbed/Testbed.Android/packages.config
+++ b/Testbed/Testbed.Android/packages.config
@@ -1,83 +1,98 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExternalStorageBuddy" version="1.0.1" targetFramework="monoandroid81" />
-  <package id="FilenameBuddy" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="FontBuddy" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="GameTimer" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="HadoukInput" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="InputHelper" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="MatrixExtensions" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="MenuBuddy" version="2.0.3" targetFramework="monoandroid81" />
-  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="monoandroid81" />
-  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="MonoGame.Framework.Android" version="3.7.0.1708" targetFramework="monoandroid44" />
-  <package id="MonogameScreenTools" version="1.0.13" targetFramework="monoandroid81" />
-  <package id="MouseBuddy" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="NETStandard.Library" version="2.0.3" targetFramework="monoandroid44" />
-  <package id="Plugin.CurrentActivity" version="2.1.0.2" targetFramework="monoandroid81" />
-  <package id="Plugin.Permissions" version="3.0.0.12" targetFramework="monoandroid81" />
-  <package id="PrimitiveBuddy" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="RandomExtensions.dmanning23" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="ResolutionBuddy" version="2.0.1" targetFramework="monoandroid44" />
-  <package id="SixLabors.Core" version="1.0.0-dev000085" targetFramework="monoandroid81" />
-  <package id="SixLabors.ImageSharp" version="1.0.0-dev002197" targetFramework="monoandroid81" />
-  <package id="StateMachineBuddy" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="monoandroid44" />
-  <package id="System.Collections" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Console" version="4.3.1" targetFramework="monoandroid44" />
-  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Drawing.Common" version="4.5.1" targetFramework="monoandroid81" />
-  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="monoandroid81" />
-  <package id="System.Globalization" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.IO" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.IO.Compression" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Linq" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Memory" version="4.5.1" targetFramework="monoandroid44" />
-  <package id="System.Net.Http" version="4.3.4" targetFramework="monoandroid44" />
-  <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="monoandroid44" />
-  <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="monoandroid44" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="monoandroid44" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="monoandroid44" />
-  <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Threading" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="monoandroid81" />
-  <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="monoandroid81" />
-  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid44" />
-  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid44" />
-  <package id="ToastBuddyLib" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="TouchScreenBuddy" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="Vector2Extensions" version="2.0.0" targetFramework="monoandroid44" />
-  <package id="Xam.Plugin.DeviceInfo" version="4.0.0.13" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="25.4.0.2" targetFramework="monoandroid81" />
-  <package id="XmlBuddy" version="2.0.1" targetFramework="monoandroid44" />
+  <package id="ExternalStorageBuddy" version="1.0.3" targetFramework="monoandroid90" />
+  <package id="FilenameBuddy" version="2.0.8" targetFramework="monoandroid90" />
+  <package id="FontBuddy" version="2.0.6" targetFramework="monoandroid90" />
+  <package id="GameTimer" version="2.0.0" targetFramework="monoandroid90" />
+  <package id="HadoukInput" version="2.0.27" targetFramework="monoandroid90" />
+  <package id="InputHelper" version="2.0.6" targetFramework="monoandroid90" />
+  <package id="MatrixExtensions" version="2.0.0" targetFramework="monoandroid90" />
+  <package id="MenuBuddy" version="2.0.48" targetFramework="monoandroid90" />
+  <package id="Microsoft.Net.Compilers.Toolset" version="3.3.1" targetFramework="monoandroid90" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="3.1.0" targetFramework="monoandroid90" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="MonoGame.Framework.Android" version="3.7.1.189" targetFramework="monoandroid90" />
+  <package id="MonogameScreenTools" version="2.0.12" targetFramework="monoandroid90" />
+  <package id="MouseBuddy" version="2.0.2" targetFramework="monoandroid90" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="monoandroid90" />
+  <package id="Plugin.CurrentActivity" version="2.1.0.4" targetFramework="monoandroid90" />
+  <package id="Plugin.Permissions" version="3.0.0.12" targetFramework="monoandroid90" />
+  <package id="PrimitiveBuddy" version="2.0.0" targetFramework="monoandroid90" />
+  <package id="RandomExtensions.dmanning23" version="2.0.0" targetFramework="monoandroid90" />
+  <package id="ResolutionBuddy" version="2.0.1" targetFramework="monoandroid90" />
+  <package id="ShareBuddy" version="2.0.9" targetFramework="monoandroid90" />
+  <package id="SixLabors.Core" version="1.0.0-dev000141" targetFramework="monoandroid90" />
+  <package id="SixLabors.ImageSharp" version="1.0.0-dev003153" targetFramework="monoandroid90" />
+  <package id="StateMachineBuddy" version="2.0.19" targetFramework="monoandroid90" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="monoandroid90" />
+  <package id="System.Collections" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Console" version="4.3.1" targetFramework="monoandroid90" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="monoandroid90" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.IO" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Linq" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Memory" version="4.5.3" targetFramework="monoandroid90" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="monoandroid90" />
+  <package id="System.Net.Primitives" version="4.3.1" targetFramework="monoandroid90" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="monoandroid90" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="monoandroid90" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="monoandroid90" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="monoandroid90" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="monoandroid90" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="monoandroid90" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="monoandroid90" />
+  <package id="System.Threading" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="monoandroid90" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid90" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid90" />
+  <package id="ToastBuddyLib" version="2.0.1" targetFramework="monoandroid90" />
+  <package id="TouchScreenBuddy" version="2.0.6" targetFramework="monoandroid90" />
+  <package id="Vector2Extensions" version="2.0.2" targetFramework="monoandroid90" />
+  <package id="Xam.Plugin.DeviceInfo" version="4.1.1" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Core.Runtime" version="1.1.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Lifecycle.LiveData" version="1.1.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Lifecycle.LiveData.Core" version="1.1.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.1.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Arch.Lifecycle.ViewModel" version="1.1.1.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Annotations" version="28.0.0.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Collections" version="28.0.0.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Compat" version="28.0.0.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="28.0.0.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.DocumentFile" version="28.0.0.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Loader" version="28.0.0.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.LocalBroadcastManager" version="28.0.0.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.Print" version="28.0.0.3" targetFramework="monoandroid90" />
+  <package id="Xamarin.Android.Support.VersionedParcelable" version="28.0.0.3" targetFramework="monoandroid90" />
+  <package id="XmlBuddy" version="2.0.1" targetFramework="monoandroid90" />
 </packages>
