--- a/Testbed/Testbed.WindowsDX/packages.config
+++ b/Testbed/Testbed.WindowsDX/packages.config
@@ -1,23 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExternalStorageBuddy" version="1.0.1" targetFramework="net461" />
-  <package id="FilenameBuddy" version="2.0.0" targetFramework="net461" />
-  <package id="FontBuddy" version="2.0.0" targetFramework="net461" />
+  <package id="ExternalStorageBuddy" version="1.0.3" targetFramework="net461" />
+  <package id="FilenameBuddy" version="2.0.8" targetFramework="net461" />
+  <package id="FontBuddy" version="2.0.6" targetFramework="net461" />
   <package id="GameTimer" version="2.0.0" targetFramework="net461" />
-  <package id="HadoukInput" version="2.0.0" targetFramework="net461" />
-  <package id="InputHelper" version="2.0.0" targetFramework="net461" />
+  <package id="HadoukInput" version="2.0.27" targetFramework="net461" />
+  <package id="InputHelper" version="2.0.6" targetFramework="net461" />
   <package id="MatrixExtensions" version="2.0.0" targetFramework="net461" />
-  <package id="MenuBuddy" version="2.0.3" targetFramework="net461" />
-  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="net461" />
+  <package id="MenuBuddy" version="2.0.48" targetFramework="net461" />
+  <package id="Microsoft.Net.Compilers.Toolset" version="3.3.1" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="MonoGame.Framework.WindowsDX" version="3.7.0.1708" targetFramework="net461" />
-  <package id="MonogameScreenTools" version="1.0.13" targetFramework="net461" />
-  <package id="MouseBuddy" version="2.0.0" targetFramework="net461" />
+  <package id="MonoGame.Framework.WindowsDX" version="3.7.1.189" targetFramework="net461" />
+  <package id="MonogameScreenTools" version="2.0.12" targetFramework="net461" />
+  <package id="MouseBuddy" version="2.0.2" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Plugin.Permissions" version="3.0.0.12" targetFramework="net461" />
   <package id="PrimitiveBuddy" version="2.0.0" targetFramework="net461" />
   <package id="RandomExtensions.dmanning23" version="2.0.0" targetFramework="net461" />
   <package id="ResolutionBuddy" version="2.0.1" targetFramework="net461" />
+  <package id="ShareBuddy" version="2.0.9" targetFramework="net461" />
   <package id="SharpDX" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net461" />
@@ -27,16 +29,16 @@
   <package id="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.XAudio2" version="4.2.0" targetFramework="net461" />
   <package id="SharpDX.XInput" version="4.2.0" targetFramework="net461" />
-  <package id="SixLabors.Core" version="1.0.0-dev000085" targetFramework="net461" />
-  <package id="SixLabors.ImageSharp" version="1.0.0-dev002197" targetFramework="net461" />
-  <package id="StateMachineBuddy" version="2.0.0" targetFramework="net461" />
+  <package id="SixLabors.Core" version="1.0.0-dev000141" targetFramework="net461" />
+  <package id="SixLabors.ImageSharp" version="1.0.0-dev003153" targetFramework="net461" />
+  <package id="StateMachineBuddy" version="2.0.19" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
@@ -48,9 +50,9 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.1" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
-  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Net.Primitives" version="4.3.1" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
@@ -58,9 +60,9 @@
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
@@ -71,17 +73,17 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net461" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
-  <package id="ToastBuddyLib" version="2.0.0" targetFramework="net461" />
-  <package id="TouchScreenBuddy" version="2.0.0" targetFramework="net461" />
-  <package id="Vector2Extensions" version="2.0.0" targetFramework="net461" />
-  <package id="Xam.Plugin.DeviceInfo" version="4.0.0.13" targetFramework="net461" />
+  <package id="ToastBuddyLib" version="2.0.1" targetFramework="net461" />
+  <package id="TouchScreenBuddy" version="2.0.6" targetFramework="net461" />
+  <package id="Vector2Extensions" version="2.0.2" targetFramework="net461" />
+  <package id="Xam.Plugin.DeviceInfo" version="4.1.1" targetFramework="net461" />
   <package id="XmlBuddy" version="2.0.1" targetFramework="net461" />
 </packages>
